Changelog for procgraph

next:
        - aggregrate multiple processes into one graph
        - fixed remaining top processes on osx

0.2.0   Fri Aug 15 15:18:27 CEST 2014
        - added osx support
        - added ssh support (keys only)
        - added zooming to graph
        - make graph label clickable
        - use single top spawn to update graph and top table
        - avoid useless flickering when updating graph
        - resize graph on window resize

0.1.0   Thu Aug 14 12:41:05 CEST 2014
        - initial release