@@ -93,10 +93,10 @@
                 <tr><th>Virtual</th><td id='virt'></td></tr>
                 <tr><th>Resident</th><td id='res'></td></tr>
                 <tr><th>Shared</th><td id='shr'></td></tr>
-                <tr><th>Status</th><td id='s'></td></tr>
                 <tr><th>%CPU</th><td id='cpu'></td></tr>
                 <tr><th>%MEM</th><td id='mem'></td></tr>
                 <tr><th>Time</th><td id='time'></td></tr>
+                <tr><th>Status</th><td id='s'></td></tr>
                 <tr><th>Command</th><td id='command'></td></tr>
               </table>
             </div>
