@@ -2,6 +2,7 @@ Changelog for procgraph
 
 next:
         - aggregrate multiple processes into one graph
+        - hide virtual and shared memory on osx
         - fixed remaining top processes on osx
 
 0.2.0   Fri Aug 15 15:18:27 CEST 2014
